# sorting-algorithms

include/: bubbles.h  exchange.h  insertion.h  optimized_bubble.h  selection.h
laba1/: README.md
laba1/include/: string_as_array.h  string_from_file.h
laba1/include/include/: string_as_c_string.h
laba1/src/: catch.hpp  compile.bat  input.txt  string_as_array.cpp  string_as_c_string.cpp  string_from_file.cpp  tests.cpp
sem1/include/: insertion.h
sem1/src/: exchange.cpp
src/: bubble.cpp  exchange.cpp  insertion.cpp  optimized_bubble.cpp  selection.cpp
test/: CMakeLists.txt  test_bubble_sort.cpp  test_exchange_sort.cpp  test_insertion_sort.cpp  test_optimized_bubble_sort.cpp  test_selection_sort.cpp
